[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"

[tool.hatch.build.targets.wheel]
include = [
    "day01.py",
    "day02.py",
    "day03.py",
    "day04.py",
    "day05.py",
    "day06.py",
    "day07.py",
    "day08.py",
    "day09.py",
    "day10.py",
    "day11.py",
    "day12.py",
    "day13.py",
    "day14.py",
    "day15.py",
]

[project]
dynamic = ["version"]
name = "aoc"
description = "Advent of Code 2024"
license.file = "LICENSE"
authors = [
    { name = "Keegan Dent", email = "keegandent@gmail.com" },
]
maintainers = [
    { name = "Keegan Dent", email = "keegandent@gmail.com" },
]

classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3 :: Only",
]

requires-python = ">=3.9"
dependencies = [
    "numpy",
    "tqdm"
]

[project.scripts]
day01 = "day01:main"
day02 = "day02:main"
day03 = "day03:main"
day04 = "day04:main"
day05 = "day05:main"
day06 = "day06:main"
day07 = "day07:main"
day08 = "day08:main"
day09 = "day09:main"
day10 = "day10:main"
day11 = "day11:main"
day12 = "day12:main"
day13 = "day13:main"
day14 = "day14:main"
day15 = "day15:main"

[project.optional-dependencies]
test = [
]
dev = [
    "black",
    "flake8",
    "isort",
]

[project.urls]
"Homepage" = "https://github.com/keegandent/2024AdventOfCode/"